--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,16 @@
+appdirs==1.4.4
+bitstruct==8.20.0
+confattr==1.7.0
+future==1.0.0
+iso8601==2.1.0
 numpy==2.2.5
 pyqtgraph==0.13.7
+pyserial==3.5
+PySide6==6.9.0
+PySide6_Addons==6.9.0
+PySide6_Essentials==6.9.0
+PyYAML==6.0.2
+serial==0.0.97
+serialtools==0.9.1
+shiboken6==6.9.0
+utils==1.0.2
